--- a/src/app/pages/register.component.html
+++ b/src/app/pages/register.component.html
@@ -1,1 +1,27 @@
-<p>register works!</p>
+<div class="container mt-4">
+  <h2>Register Form</h2>
+  <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+
+    <div class="form-group mb-3">
+      <label>Full Name:</label>
+      <input class="form-control" formControlName="fullName" type="text" />
+    </div>
+
+    <div class="form-group mb-3">
+      <label>Email:</label>
+      <input class="form-control" formControlName="email" type="email" />
+    </div>
+
+    <div class="form-group mb-3">
+      <label>Password:</label>
+      <input class="form-control" formControlName="password" type="password" />
+    </div>
+
+    <div class="form-group mb-3">
+      <label>Confirm Password:</label>
+      <input class="form-control" formControlName="confirmPassword" type="password" />
+    </div>
+
+    <button class="btn btn-primary" type="submit">Register</button>
+  </form>
+</div>
