--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -14,9 +14,11 @@
     <li class="nav-item">
       <a routerLink="/patients" class="nav-link">🧑‍🤝‍🧑 Patients</a>
     </li>
+   
     <li class="nav-item">
-      <a routerLink="/appointment" class="nav-link">🗓️ Appointment</a>
-    </li>
+  <a routerLink="/appointments" class="nav-link">🗓️ Appointments</a> 
+</li>
+
     <li class="nav-item">
       <a class="nav-link" (click)="logout()">🚪 Logout</a>
     </li>
