--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,51 +1,35 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm px-4">
-  <a class="navbar-brand fw-bold" routerLink="/">🏥 HealthCare</a>
+
+  <!-- <a class="navbar-brand fw-bold" routerLink="/">🏥 HealthCare</a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
     <span class="navbar-toggler-icon"></span>
-  </button> 
+  </button>  -->
 
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav me-auto">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/home">Home</a>
-      </li>
-      <li class="nav-item" *ngIf="userRole === 'admin'">
-        <a class="nav-link" routerLink="/doctors">Doctors</a>
-      </li>
-      <li class="nav-item" *ngIf="userRole === 'admin'">
-        <a class="nav-link" routerLink="/patients">Patients</a>
-      </li>
-      <li class="nav-item" *ngIf="userRole === 'doctor'">
-        <a class="nav-link" routerLink="/my-patients">My Patients</a>
-      </li>
-      <li class="nav-item" *ngIf="userRole === 'patient'">
-        <a class="nav-link" routerLink="/book-appointment">Book Appointment</a>
-      </li>
-    </ul>
-    <ul class="navbar-nav">
-      <li class="nav-item" *ngIf="!isLoggedIn">
-        <a class="nav-link" routerLink="/login">Login</a>
-      </li>
-      <li class="nav-item" *ngIf="!isLoggedIn">
-        <a class="nav-link" routerLink="/register">Register</a>
-      </li>
-      <li class="nav-item" *ngIf="isLoggedIn">
-        <a class="nav-link text-danger" (click)="logout()">Logout</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+  
+<div style="display: flex; justify-content: space-between; align-items: center; padding: 16px 24px;">
+  <h3 style="margin: 0;">Personal Informention</h3>
+  <button
+    (click)="openModel()"
+    style="
+      background-color: #1976d2;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      padding: 8px 20px;
+      font-size: 14px;
+      font-weight: 600;
+      cursor: pointer;
+      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+      transition: background-color 0.3s ease;
+    "
+    onmouseover="this.style.backgroundColor='#125ea2'"
+    onmouseout="this.style.backgroundColor='#1976d2'"
+  >
+    ➕ Add New User
+  </button>
+</div>
+
 
 <div class="container-fluid">
-  <div class="row align-items-center p-3 bg-info text-white">
-    <div class="col-6">
-      <h3 class="m-0">Employee List</h3>
-    </div>
-    <div class="col-6 text-end">
-      <button class="btn btn-warning" (click)="openModel()">Add Employee</button>
-    </div>
-  </div>
-
   <!-- Table for employee list -->
   <table class="table table-bordered table-striped" *ngIf="employeeList.length > 0; else noData">
     <thead>
