--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -3,9 +3,9 @@
   position: fixed;
   top: 0;
   left: 0;
-  height: 100vh;
-  width: 220px;
-  background-color: #0d6efd;
+  height: 150vh;
+  width: 250px;
+  background-color: #415f8d;
   color: white;
   padding-top: 20px;
   z-index: 1000;
@@ -19,14 +19,14 @@
 }
 
 .nav-link {
-  color: white;
-  padding: 12px 20px;
+  color: rgb(247, 238, 238);
+  padding: 17px 30px;
   display: block;
-  font-size: 16px;
+  font-size: 20px;
 }
 
 .nav-link:hover {
-  background-color: #084298;
+  background-color: #94b1b1;
   text-decoration: none;
-  border-radius: 4px;
+  border-radius: 8px;
 }
